# Educational-app-EduCase-

./: test_case_player.py
educase/: .gitignore  .pre-commit-config.yaml  alembic.ini  app.py  config.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  run.bat  run_constructor.py  run_scenario_builder.py  start_constructor.bat  start_scenario_builder.bat
educase/core/: database.py  db_maintenance.py  di_container.py  event_bus.py  exceptions.py  idle_guard.py  logger.py  thread_pool.py  validators.py
educase/migrations/: env.py
educase/migrations/versions/: 001_initial.py  ffcca349e522_content_schema.py
educase/models/: __init__.py  attempt.py  base.py  content.py  media.py  scenario.py  system.py  task.py  user.py
educase/repositories/: attempt_repo.py  base_repo.py  content_repo.py  group_repo.py  media_repo.py  scenario_repo.py  system_repo.py  task_repo.py  user_repo.py
educase/services/: attempt_service.py  auth_service.py  backup_service.py  case_service.py  grader_service.py  media_service.py  module_service.py  scenario_service.py  seed.py  task_service.py  user_service.py
educase/tests/: conftest.py
educase/tests/unit/: test_auth.py  test_services.py
educase/tools/: make_ico.py
educase/ui/components/: accordion.py  activity_feed.py  avatar.py  badge.py  card.py  case_card.py  color_picker.py  common.py  continue_banner.py  dialog.py  empty_state.py  feedback_panel.py  group_card.py  heatmap_widget.py  image_picker.py  loading_overlay.py  progress_bar.py  progress_ring.py  rich_text_editor.py  ring_progress.py  score_badge.py  (+10 more)
(+86 files in other folders)
