[project]
name = "educase"
version = "1.0.0"
description = "Интерактивная образовательная платформа — ВМедА им. С.М. Кирова"
requires-python = ">=3.12"

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "UP"]
target-version = "py312"

[tool.mypy]
strict = true
plugins = ["sqlalchemy.ext.mypy.plugin"]
python_version = "3.12"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short -q"
